--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-node",
+  "name": "gatsby-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^14.4.2",
-    "jsonwebtoken": "^8.5.1"
+    "graphql": "^14.4.2"
   }
 }
